Connect JavaFX DONE